--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "bulma": "0.7.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-google-maps-loader": "^4.2.3",
+    "react-google-places-suggest": "^3.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
