--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.4.1",
     "react-google-maps-loader": "^4.2.3",
     "react-google-places-suggest": "^3.4.0",
+    "react-places-autocomplete": "^7.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
